# cuckoocoin-core

./: .gitignore  .travis.yml  COPYING  INSTALL  Makefile.am  README.md  configure.ac  libcuckoocoinconsensus.pc.in
.tx/: config
build-aux/m4/: cuckoocoin_find_bdb48.m4  cuckoocoin_qt.m4  cuckoocoin_subdir_to_include.m4
contrib/: README.md  cuckoocoin-qt.pro  cuckoocoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  cuckoocoin-qt.desktop  cuckoocoin-qt.install  cuckoocoin-qt.lintian-overrides  cuckoocoin-qt.protocol  cuckoocoin-tx.install  cuckoocoind.bash-completion  cuckoocoind.examples  cuckoocoind.install  cuckoocoind.lintian-overrides  cuckoocoind.manpages  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/init/: README.md  (+5 more)
depends/: Makefile  README.md  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  build-osx.md  build-unix.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bitcoin-cli.cpp  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_read.cpp  core_write.cpp  cuckoocoin-cli-res.rc  (+84 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/leveldb/util/: hash.cc
src/policy/: fees.cpp  fees.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoinamountfield.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  cuckoocoin.cpp  cuckoocoin.qrc  cuckoocoin_locale.qrc  cuckoocoinaddressvalidator.cpp  cuckoocoinaddressvalidator.h  cuckoocoinamountfield.cpp  cuckoocoinamountfield.h  cuckoocoingui.cpp  cuckoocoingui.h  cuckoocoinstrings.cpp  cuckoocoinunits.cpp  cuckoocoinunits.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  (+69 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_en.ts  bitcoin_es.ts  bitcoin_fr.ts  bitcoin_he.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_nb.ts  bitcoin_nl.ts  bitcoin_pl.ts  bitcoin_pt_BR.ts  bitcoin_ro_RO.ts  bitcoin_ru.ts  bitcoin_sk.ts  bitcoin_sl_SI.ts  bitcoin_sv.ts  bitcoin_tr.ts  bitcoin_uk.ts  bitcoin_zh_CN.ts  bitcoin_zh_TW.ts  cuckoocoin_ach.ts  cuckoocoin_af_ZA.ts  cuckoocoin_ar.ts  cuckoocoin_be_BY.ts  cuckoocoin_bg.ts  cuckoocoin_bs.ts  cuckoocoin_ca.ts  cuckoocoin_ca@valencia.ts  cuckoocoin_ca_ES.ts  cuckoocoin_cmn.ts  cuckoocoin_cs.ts  cuckoocoin_cy.ts  cuckoocoin_da.ts  cuckoocoin_de.ts  cuckoocoin_el_GR.ts  (+56 more)
src/qt/res/: cuckoocoin-qt-res.rc
src/qt/res/icons/: cuckoocoin.icns
src/qt/test/: Makefile  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: cuckoocoinconsensus.cpp  cuckoocoinconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: configure.ac
src/support/: cleanse.cpp  cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocoin-util-test.py  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  (+10 more)
src/test/data/: README.md  base58_keys_invalid.json  cuckoocoin-util-test.json
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
src/wallet/: crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
(+93 files in other folders)
